get result from db
